--- a/ProjectFrontEnd/FatimaAliyeva.html
+++ b/ProjectFrontEnd/FatimaAliyeva.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Porfolio Website</title>
 
-    <link rel="stylesheet" href="FatimaAliyeva.css">
+    <link rel="stylesheet" href="../ProjectFrontEnd/FatimaAliyeva.css">
     
 </head>
 
