--- a/ProjectFrontEnd/FatimaAliyeva.html
+++ b/ProjectFrontEnd/FatimaAliyeva.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Porfolio Website</title>
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../ProjectFrontEnd/FatimaAliyeva.css">
     
 </head>
@@ -50,7 +51,7 @@
         <img src="Shekil2.jpg" alt="">
         </div>
         <div class="column right">
-        <div class="text">I'm Fatima and I'm a <span class="typing-2"></span></div>
+        <div class="text">I'm Fatima and I'm a Developer <span class="typing-2"></span></div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
         <a href="#">Download CV</a>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ab, quod, inventore consequuntur a atque totam consectetur nesciunt ipsum officiis temporibus accusantium quo assumenda labore dolor aut itaque. Aspernatur eveniet atque id earum qui expedita possimus eos fugit temporibus ab, corrupti impedit voluptatem quod dolores veritatis minus quo magnam? Et architecto consequatur, veritatis reprehenderit ea quam repellendus ducimus eaque! Libero deserunt quam, consequuntur dolorem enim ea maiores, doloremque repellat iste, eius nemo consequatur eaque explicabo! Explicabo quae provident minima, architecto assumenda officia ex dolore fugit totam natus? Odio culpa similique architecto iste quam soluta tempora necessitatibus ipsam quisquam, saepe enim eaque praesentium tempore nisi quae ut atque quos impedit explicabo, sunt ducimus nostrum expedita? Itaque esse fugiat porro nobis, quisquam est dolorem possimus quod maxime? Tempora molestias facilis suscipit laboriosam consequuntur dolore? Officia dolorem, laboriosam quaerat doloribus commodi recusandae blanditiis obcaecati, saepe deleniti, iste iure et ad veritatis! Saepe commodi ratione error libero soluta veritatis quidem iure! Temporibus velit repellat adipisci accusamus facere eum quasi harum, delectus cum, obcaecati nam animi magni officiis quas, corrupti mollitia iste dignissimos perspiciatis nulla! Impedit molestias dolore tempore saepe ea voluptates odit ipsum dolor adipisci, veritatis labore minus, vitae nostrum repudiandae aspernatur facere cupiditate.</p>
