--- a/JavaScript/test.html
+++ b/JavaScript/test.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <script src="test.app.js"></script>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eius, eaque enim, nihil nesciunt amet quae earum voluptate ad numquam, vel atque et quisquam. Sint numquam aperiam animi facere necessitatibus.
 </body>
 </html>
