--- a/JavaScript/index2.html
+++ b/JavaScript/index2.html
@@ -1,9 +1,22 @@
-<link rel="stylesheet" href="app2.js">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Document</title>
+</head>
 <body>
-    <p id="demo"></p>
-    <script src="app2.js"></script>
-    </head>
+    <form action="">
+        <input type="text" placeholder="ad" class="name"><br><br>
+        <input type="text" placeholder="soyad" class="surname" ><br> <br>
+        <button  class="btn" type="submit" style="background-color:aqua;color: blue; border-radius: 10%; width: 100px; height: 25px;" > tikla</button>
+    </form>
+
+    <script src="app2.js">
+
+    </script>
+
 </body>
-</html> 
+</html>
