--- a/ProjectFrontEnd/FatimaAliyeva.html
+++ b/ProjectFrontEnd/FatimaAliyeva.html
@@ -54,7 +54,140 @@
         <div class="text">I'm Fatima and I'm a Developer <span class="typing-2"></span></div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
         <a href="#">Download CV</a>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ab, quod, inventore consequuntur a atque totam consectetur nesciunt ipsum officiis temporibus accusantium quo assumenda labore dolor aut itaque. Aspernatur eveniet atque id earum qui expedita possimus eos fugit temporibus ab, corrupti impedit voluptatem quod dolores veritatis minus quo magnam? Et architecto consequatur, veritatis reprehenderit ea quam repellendus ducimus eaque! Libero deserunt quam, consequuntur dolorem enim ea maiores, doloremque repellat iste, eius nemo consequatur eaque explicabo! Explicabo quae provident minima, architecto assumenda officia ex dolore fugit totam natus? Odio culpa similique architecto iste quam soluta tempora necessitatibus ipsam quisquam, saepe enim eaque praesentium tempore nisi quae ut atque quos impedit explicabo, sunt ducimus nostrum expedita? Itaque esse fugiat porro nobis, quisquam est dolorem possimus quod maxime? Tempora molestias facilis suscipit laboriosam consequuntur dolore? Officia dolorem, laboriosam quaerat doloribus commodi recusandae blanditiis obcaecati, saepe deleniti, iste iure et ad veritatis! Saepe commodi ratione error libero soluta veritatis quidem iure! Temporibus velit repellat adipisci accusamus facere eum quasi harum, delectus cum, obcaecati nam animi magni officiis quas, corrupti mollitia iste dignissimos perspiciatis nulla! Impedit molestias dolore tempore saepe ea voluptates odit ipsum dolor adipisci, veritatis labore minus, vitae nostrum repudiandae aspernatur facere cupiditate.</p>
+    </div>
+</div>
+</div>
+</section>
+<!-- services section start -->
+<section class="services" id="services">
+<div class="max-width">
+<h2 class="title">My services</h2>
+<div class="serv-content">
+    <div class="card">
+        <div class="box">
+            <i class="fas fa-paint-brush"></i>
+            <div class="text">Web Design</div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="box">
+            <i class="fas fa-chart-line"></i>
+            <div class="text">Advertising</div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="box">
+            <i class="fas fa-code"></i>
+            <div class="text">Apps Design</div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+        </div>
+    </div>
+   </div>
+</div>
+</div>
+</section>
+<!-- skills section start -->
+<section class="skills" id="skills">
+<div class="max-width">
+<h2 class="title">My skills</h2>
+<div class="skills-content">
+    <div class="column left">
+        <div class="text">My creative skills & experiences.</div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+        <a href="#">Read more</a>
+    </div>
+    <div class="column right">
+        <div class="bars">
+            <div class="info">
+                <span>HTML</span>
+                <span>80%</span>
+            </div>
+            <div class="line html"></div>
+        </div>
+        <div class="bars">
+            <div class="info">
+                <span>CSS</span>
+                <span>80%</span>
+            </div>
+            <div class="line css"></div>
+        </div>
+        <div class="bars">
+            <div class="info">
+                <span>JavaScript</span>
+                <span>80%</span>
+            </div>
+            <div class="line js"></div>
+        </div>
+        <div class="bars">
+            <div class="info">
+                <span>Power Bi</span>
+                <span>80%</span>
+            </div>
+            <div class="line php"></div>
+        </div>
+        <div class="bars">
+            <div class="info">
+                <span>MySQL</span>
+                <span>70%</span>
+            </div>
+            <div class="line mysql"></div>
+        </div>
+    </div>
+</div>
+</div>
+</section>
+<!-- teams section start -->
+<section class="teams" id="teams">
+<div class="max-width">
+<h2 class="title">My teams</h2>
+<div class="carousel owl-carousel">
+    <div class="card">
+        <div class="box">
+            <img src="Aydan.jpeg" alt="">
+            <div class="text">Aydan Rzayeva</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="box">
+            <img src="fiidan.jpeg" alt="">
+            <div class="text">Fidan Mammadli</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="box">
+            <img src="nigar.jpeg" alt="">
+            <div class="text">Nigar Celilova</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="box">
+            <img src="aytac.jpeg" alt="">
+            <div class="text">Aytac Rzayeva</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="box">
+            <img src="Rufet.jpeg" alt="">
+            <div class="text">Rufet Shirvanli</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+    </div>
+</div>
+</div>
+</section>
 
+<!-- footer section start -->
+<footer>
+<span>Created By <a href="https://www.codingnepalweb.com">Fatima Aliyeva</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+</footer>
+
+</body>
+</html>
     </body>
 </html>
