--- a/Works/HTML and CSS/1Ders.html/index.html
+++ b/Works/HTML and CSS/1Ders.html/index.html
@@ -2,17 +2,55 @@
 <html>
     <head>
         <title>Baki seheri</title>
-        <h1>Hello Baku</h1>
+        <h1> Baku</h1>
+        <br> </br>
+        <h2> Welcome to Azerbaijan</h2>
+        <img src="azerbaijan-country-detailed-editable-map-vector-35718547.jpg"  alt="Hello">
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
 
-        <img src="download (1).jpg"  alt="Hello">
-
-        <h>Hello Baku</h2>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat pariatur officia ipsa ab iure, eos saepe doloremque repellendus inventore adipisci voluptatem, perferendis, nostrum in voluptates odio! Nisi, laudantium voluptates!</p>
- <b>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis sequi quibusdam aut porro. Consectetur doloribus consequatur iste earum quam aspernatur deleniti enim, nisi accusantium laboriosam ex assumenda porro incidunt delectus.</b>
-    <a href="download (1).jpg">Show my logo</a>
+        <br></br>
+ <b>Azerbaijan (UK: /ˌæzərbaɪˈdʒɑːn, -ˈʒɑːn/ (About this soundlisten), US: /ˌɑːzərbaɪˈdʒɑːn, ˌæz-/;[9] Azerbaijani: Azərbaycan [ɑːzæɾbɑjˈd͡ʒɑn]), officially the Republic of Azerbaijan, is a country located at the boundary of Eastern Europe and Western Asia.[10] It is a part of the Caucasus region, and is bounded by the Caspian Sea to the east, Russia to the north, Georgia to the northwest, Armenia and Turkey to the west, and Iran to the south. Baku is the capital and largest city..</b>
+    <a href="360_F_377584432_KvlRG1zCn0M384OQ25Ij3GafmDm5sAN3.jpg" >Show Azerbaijan flag</a>
 </head>
-    <body>
 
+<body>
+    <table border="5">
+
+        <tr>
+        <th>Id</th>
+        <th>Name</th>
+        <th>Surname</th>
+
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Fatima</td>
+            <td>Aliyeva</td>
+    
+            </tr>
+    </table>
+    <br>
+    <br>
+
+    <form action="">
+        <label for="">Username</label>
+        <input type="text" placeholder="Username">
+        <br>
+        <br>
+        <label for="">Email</label>
+        <input type="email" placeholder="email">
+        <br>
+        <br>
+        <label for=""> Gender </label>
+        <input type="radio" name="gender">Men
+        <input type="radio" name="gender">Women
+        <br>
+        <br>
+        <button class="btn" type="submit" style="background-color:aqua;color: blue; border-radius: 10%; width: 100px; height: 25px;">Gonder</button>
+    </form>
+    <script src="app11.js">
+
+    </script>
     </body>
 </html>
