--- a/ProjectFrontEnd/FatimaAliyeva.html
+++ b/ProjectFrontEnd/FatimaAliyeva.html
@@ -9,6 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../ProjectFrontEnd/FatimaAliyeva.css">
     
+
+
+    
 </head>
 
 <body>
@@ -26,7 +29,8 @@
 
 </ul>
  <div class="menu-btn">
-     <i class="fas fa-bars"></i>
+     <i class="fas fa-bars">
+     </i>
  </div>
     </div>
 
@@ -184,7 +188,7 @@
 
 <!-- footer section start -->
 <footer>
-<span>Created By <a href="https://www.codingnepalweb.com">Fatima Aliyeva</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+<span>Created By <a href="">Fatima Aliyeva</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
 </footer>
 
 </body>
