--- a/ProjectFrontEnd/portfolio.html
+++ b/ProjectFrontEnd/portfolio.html
@@ -7,7 +7,7 @@
     <title>Personal Porfolio Website</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../ProjectFrontEnd/FatimaAliyeva.css">
+    <link rel="stylesheet" href="../ProjectFrontEnd/portfolia.css">
     
 
 
@@ -52,7 +52,7 @@
         <h2 class="title">About me</h2>
         <div class="about-content">
         <div class="column left">
-        <img src="Shekil2.jpg" alt="">
+        <img src="Pictures/Shekil2.jpg" alt="">
         </div>
         <div class="column right">
         <div class="text">I'm Fatima and I'm a Developer <span class="typing-2"></span></div>
@@ -149,35 +149,35 @@
 <div class="carousel owl-carousel">
     <div class="card">
         <div class="box">
-            <img src="Aydan.jpeg" alt="">
+            <img src="Pictures/Aydan.jpeg" alt="">
             <div class="text">Aydan Rzayeva</div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
     </div>
     <div class="card">
         <div class="box">
-            <img src="fiidan.jpeg" alt="">
+            <img src="Pictures/fiidan.jpeg" alt="">
             <div class="text">Fidan Mammadli</div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
     </div>
     <div class="card">
         <div class="box">
-            <img src="nigar.jpeg" alt="">
+            <img src="Pictures/nigar.jpeg" alt="">
             <div class="text">Nigar Celilova</div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
     </div>
     <div class="card">
         <div class="box">
-            <img src="aytac.jpeg" alt="">
+            <img src="Pictures/aytac.jpeg" alt="">
             <div class="text">Aytac Rzayeva</div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
     </div>
     <div class="card">
         <div class="box">
-            <img src="Rufet.jpeg" alt="">
+            <img src="Pictures/Rufet.jpeg" alt="">
             <div class="text">Rufet Shirvanli</div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
@@ -185,7 +185,6 @@
 </div>
 </div>
 </section>
-
 <!-- footer section start -->
 <footer>
 <span>Created By <a href="">Fatima Aliyeva</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
