--- a/ProjectFrontEnd/portfolio.html
+++ b/ProjectFrontEnd/portfolio.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../ProjectFrontEnd/portfolia.css">
+    <link rel="stylesheet" href="front.js">
     
 
 
@@ -186,8 +187,36 @@
 </div>
 </section>
 <!-- footer section start -->
+<div class="column right">
+    <div class="text">Message me</div>
+    <form action="#">
+        <div class="fields">
+            <div class="field name">
+                <input type="text" placeholder="Name" required>
+            </div>
+            <div class="field email">
+                <input type="email" placeholder="Email" required>
+            </div>
+        </div>
+        <div class="field">
+            <input type="text" placeholder="Subject" required>
+        </div>
+        <div class="field textarea">
+            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+        </div>
+        <div class="button-area">
+            <button type="submit">Send message</button>
+        </div>
+    </form>
+</div>
+</div>
+</div>
+</section>
+<!-- footer section start -->
 <footer>
 <span>Created By <a href="">Fatima Aliyeva</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+<script src="script.js"></script>
+
 </footer>
 
 </body>
